--- a/src/components/alg/alg-conspect/sp1/pages/elem-sp21.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-sp21.html
@@ -1,12 +1,12 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
 
 <article class="article">
-  <h1>Занятие 21 Графы#3. Поиск в глубину</h1>
+  <h1>Занятие 21 Графы #3. DFS. Поиск в глубину</h1>
   <p>Конспект видео от 2025.02.15</p>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/588471" target="_blank">Codeforces Контест 588471</a></p>
 </article>
@@ -17,7 +17,7 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p1">Графы#3. Поиск в глубину</a>
+    <a href="#p1">Графы #3. DFS. Поиск в глубину</a>
   </p>
   <p>
         <a href="#task1">Задача A. Дерево</a>
@@ -39,12 +39,11 @@
 </article>
 
 
-<!-- Графы#3. Поиск в глубину -->
+<!-- Графы #3. DFS. Поиск в глубину -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h3>Графы#3. Поиск в глубину</h3>
+  <h3>Графы #3. DFS. Поиск в глубину</h3>
 
-  <h4>Поиск в глубину. DFS</h4>
   <p>Алгоритм «поиск в глубину», его обыденное название dfs (depth-first search), основан на трех принципах, а именно:</p>
   <ol>
     <li>обходим граф, посещая каждую вершину только один раз;</li>
