--- a/src/components/alg/alg-conspect/sp1/pages/elem-sp22.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-sp22.html
@@ -1,12 +1,12 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
 
 <article class="article">
-  <h1>Занятие 22 Графы#4. Алгоритм Дейкстры</h1>
+  <h1>Занятие 22 Графы #4. Алгоритм Дейкстры</h1>
   <p>Конспект видео от 2025.02.22</p>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/590577" target="_blank">Codeforces Контест 590577</a></p>
 </article>
@@ -17,7 +17,7 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p1">Графы#4. Алгоритм Дейкстры</a>
+    <a href="#p1">Графы #4. Алгоритм Дейкстры</a>
   </p>
   <p>
         <a href="#task1">Задача A. Минимальная стоимость проезда</a>
@@ -40,10 +40,10 @@
 </article>
 
 
-<!-- Графы#4. Алгоритм Дейкстры -->
+<!-- Графы #4. Алгоритм Дейкстры -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h3>Графы#4. Алгоритм Дейкстры</h3>
+  <h3>Графы #4. Алгоритм Дейкстры</h3>
 
   <p>Алгоритм Дейкстры решает крайне популярную задачу: определить кратчайший путь между вершинами start и finish. При построении мы можем запоминать пути от вершины start до всех вершин для восстановления путей.</p>
   <p>Рис.: 1 Неориентированный взвешенный граф</p>
