--- a/src/components/alg/alg-conspect/sp1/pages/elem-sp23.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-sp23.html
@@ -1,12 +1,12 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
 
 <article class="article">
-  <h1>Занятие 23 Математика#2. Комбинаторика. Основы</h1>
+  <h1>Занятие 23 Математика #2. Комбинаторика. Основы</h1>
   <p>Конспект видео от 2025.03.01</p>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/592220" target="_blank">Codeforces Контест 592220</a></p>
 </article>
@@ -17,7 +17,7 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p1">Математика#2. Комбинаторика. Основы</a>
+    <a href="#p1">Математика #2. Комбинаторика. Основы</a>
   </p>
   <p>
         <a href="#task1">Задача A. Дальние родственники и торт</a>
@@ -42,10 +42,10 @@
 </article>
 
 
-<!-- Математика#2. Комбинаторика. Основы -->
+<!-- Математика #2. Комбинаторика. Основы -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h3>Математика#2. Комбинаторика. Основы</h3>
+  <h3>Математика #2. Комбинаторика. Основы</h3>
 
   <p>Комбинаторика - математический раздел, изучающий вопросы о том, сколько различных комбинаций, подчиненных тем или иным условиям, можно составить из заданных объектов.</p>
   <p>Задачи на комбинаторику в спортивном программировании обычно разделяются на два типа:</p>
