--- a/src/components/alg/alg-conspect/sp1/pages/elem-sp6.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-sp6.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
@@ -206,7 +206,7 @@ int main() {
   <div class="anchor" id="p6"></div>
   <h3>Работа с файлами</h3>
 
-  <p>Для работы с файлами необходимо подключить заголовочный файл fstream. В fstream определены несколько классов и подключены заголовочные файлы ifstream> — файловый ввод и ofstream — файловый вывод.
+  <p>Для работы с файлами необходимо подключить заголовочный файл fstream. В fstream определены несколько классов и подключены заголовочные файлы ifstream — файловый ввод и ofstream — файловый вывод.
   </p>
 <pre>
 #include &lt;fstream&gt;
@@ -221,6 +221,8 @@ int main() {
   out.close();
 }
 </pre>
+
+  <h4>Перенаправление stdin, stdout и stderr на файлы, определенные пользователем</h4>
   <p>freopen обычно используется для перенаправления заранее открытых файлов stdin, stdout и stderr на файлы, определенные пользователем.</p>
   <ul>
     <li>"r" Открывает для чтения. Если файл не существует или не удается найти, вызов завершается ошибкой freopen.</li>
