--- a/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
+++ b/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
@@ -5600,5 +5600,238 @@ int main() {
 </pre>
 
   <p>Мы рассмотрели только базовую работу с указателями и ссылками. Мы еще не рассматривали модификаторы const и работу с динамической памятью. Если описывать все возможности работы с указателями и ссылками, то надо описать половину работы всего языка C++.</p>
+
+  <details>
+    <summary>Задача 1. Прием по ссылке</summary>
+    <p>В этой задаче требуется реализовать функцию, которая принимает число типа int по ссылке и увеличивает его значение в два раза.</p>
+    <p>Реализуйте единственную функцию f, принимающую одно число типа int по ссылке и увеличивающее его значение в два раза.</p>
+<pre>
+void f(int &a) {
+  a *= 2;
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 2. Подозрительный подарок</summary>
+    <p>Недавно вы были в шаурмячной рядом с вокзалом, и в ней, в дополнение к шаурме, вам подарили указатель. Сама шаурма никаких подозрений вызывать не может, а вот с указателем может быть что-то нечисто. Вы решили его проверить. Для этого вам необходимо реализовать функцию, которая возвращает истину, если указатель нулевой, и ложь иначе.</p>
+    <p>Вам необходимо реализовать функцию check, принимающую один указатель на переменную типа int, и возвращающую true, если этот указатель нулевой и ложь иначе.</p>
+
+    <p>Пример</p>
+    <code>0</code>
+    <code>1</code>
+<pre>
+bool check(int *p) {
+  return !p;
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 3. Арифметическая прогрессия</summary>
+    <p>Иван прятал числа на черный день, и вот этот черный день настал! За всю свою жизнь Иван накопил целых три целых числа, но за такой долгий срок последнее число немножко поели крысы. Иван точно помнить, что данные три числа образовывали арифметическую прогрессию. Помогите Ивану, напишите функцию, которая принимает три переменные и исправляет третью.</p>
+    <p>Вам необходимо реализовать функцию f, принимающую три целых числа типа int. В результате работы функции числа в этих трех переменных должны образовывать арифметическую прогрессию в том порядке, в котором они были переданы в функцию. Обратите внимание - значения должны измениться в переданных переменных, а не в созданных для функции копиях.</p>
+
+    <p>Пример</p>
+    <code>6 9 13</code>
+    <code>6 9 12</code>
+<pre>
+void f(int &a, int &b, int &c) {
+  int tmp = b - a;
+  c = b + tmp;
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 4. Расстояние</summary>
+    <p>Мы загадали массив, содержащий переменные типа int и два числа в нем. Вам необходимо реализовать функцию, которая ищет расстояние между загаданными элементами. Причем на вход вашей функции мы будем передавать сами эти элементы. Другими словами, в функции main следующий код должен выводить на экран количество элементов между  i-м и j-м элементом массива включительно.</p>
+    <code>cout &lt;&lt; dist(a[i], a[j]) &lt;&lt; endl;</code>
+    <p>Вам необходимо реализовать функцию dist, которая по переданным элементам одного массива типа int определит расстояние между ними.</p>
+
+    <p>Пример</p>
+    <code>10 4 6</code>
+    <code>3</code>
+<pre>
+int dist(int &i, int &j) {
+  int *iPtr = &amp;i;
+  int *jPtr = &amp;j;
+  return abs(iPtr - jPtr) + 1;
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Задача 5. Вечное слияние упорядоченного разума</summary>
+    <p>В этой задаче вам необходимо реализовать функцию merge. Эта функция принимает на вход 5 указателей: первые два указывают на начало и конец первого массива включительно, следущие два - на начало и конец второго массива, а пятый указатель указывает на начало массива-буфера, в который необходимо слить первые два. Гарантируется, что данные массивы не пересекаются между собой и буфером, а также что в буфере достаточно выделенной памяти, чтобы вместить первые два. Также гарантируется, что размеры исходных массивов не превосходят 10⁵.</p>
+    <p>Дополнительно гарантируется, что два данных массива отсортированы по неубыванию, требуется чтобы получившийся массив также был отсортирован по неубыванию.</p>
+
+    <p>Пример</p>
+<pre>
+4
+1 7 8 9
+6
+1 2 3 3 9 10
+</pre>
+  <code>1 1 2 3 3 7 8 9 9 10 </code>
+  </details>
 </article>
 
+
+<!-- 4.3 Структура: определение и поля -->
+<article class="article">
+  <div class="anchor" id="p4.3"></div>
+  <h3>4.3 Структура: определение и поля</h3>
+
+  <h4>Сложные объекты</h4>
+
+  <p>В этом уроке мы обсудим как можно создавать свои пользовательские типы данных и методы работы с ними. Стандартные типы данных, такие как int, char, long long и т.п., не всегда удобны сами по себе. Зачастую, объекты, с которыми мы работаем, описываются с помощью нескольких параметров.</p>
+  <p>Например, для описания жилого дома нужны несколько параметров: высота, число этажей, число квартир, адрес... На каждый параметр можно завести переменную, но что если таких объектов несколько? И с ними нужно работать. Например, сортировать их по высоте, находить минимальное количество этажей. Способ по умолчанию это хранить несколько массивов, в каждом из которых хранить некоторые параметры. Но это крайне неудобно, например, если хочется поменять два объекта местами. Тогда нужно поменять местами все параметры у соответствующих массивов. В этом случае, всегда есть риск забыть поменять какой-нибудь параметр. Особенно остро эта проблема проявляется если вы захотите добавить еще один параметр уже после того как написали основной код. В этом случае легко забыть, что у функции swap надо добавить еще одну строчку. Также большим недостатком будет что вся разработка завязана на конкретном наборе массивов. Например, swap не сможет поменять местами такие же дома, но хранящиеся в других массивах.</p>
+  <p>Вследствие такого рода неудобств, в C++ всроена возможность создания своего пользовательского типа. Чтобы начать, необходимо написать:</p>
+  <code>struct House {};</code>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+struct House {};
+
+void helloHouse(House h) {
+  cout &lt;&lt; "Hello, House!" &lt;&lt; endl;
+}
+
+int main() {
+  House h;
+  helloHouse(h);
+
+  return 0;
+}
+</pre>
+
+  <p>Теперь мы можем сказать, что мы создали новый тип данных House. Можно создавать переменную типа House и даже передавать ее в функцию. Но практического смысла все это пока не имеет. Чтобы обрести практический смысл, добавим в нашу структуру переменные.</p>
+<pre>
+struct House {
+  double height;
+  int floors;
+  int flats;
+};
+</pre>
+  <p>Сейчас наш House состоит из трех параметров: высоты height, этажей floors и квартир flats. Эти переменные называются полями структуры House.</p>
+  <p>Напишем программу, в которой создадим экземпляры структуры House и поработаем с их полями. Присвоим им некоторые значения.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+struct House {
+  double height;
+  int floors;
+  int flats;
+};
+
+int main() {
+  House h1, h2, h3, h4;
+  h3.height = 10.74;
+  h3.floors = 3;
+  h3.flats = 12;
+
+  cin >> h1.height >> h1.floors >> h1.flats;
+
+  h1.height += h3.height;
+  h2.height = h1.height - h3.height;
+  h2.floors = h1.floors + h3.floors;
+  h2.flats = h2.floors * 2 + h3.floors * 3;
+
+  cout &lt;&lt; h2.height &lt;&lt; ' '
+       &lt;&lt; h2.floors &lt;&lt; ' '
+       &lt;&lt; h2.flats &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+  <p>Можно присваивать значение не только полям структуры, но и всей структуре целиком. Если, например, мы напишем h4 = h3, то значение всех полей h3 будут почленно скопированы в h4. Также мы можем объявить ссылку и указатель на экземпляр класса House.</p>
+  <p>Обратите внимение, если у вас есть указатель ukh на структуру, то доступ к его полям осуществляется не с помощью оператора "." точка, а с помощью оператора "->" стрелочка.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+struct House {
+  double height;
+  int floors;
+  int flats;
+};
+
+int main() {
+  House h1, h2, h3, h4;
+  h3.height = 10.74;
+  h3.floors = 3;
+  h3.flats = 12;
+
+  h4 = h3;
+  cout &lt;&lt; h4.height &lt;&lt; ' '
+       &lt;&lt; h4.floors &lt;&lt; ' '
+       &lt;&lt; h4.flats &lt;&lt; endl;
+
+  House &linkh3 = h3;
+  linkh3.floors *= 5;
+  cout &lt;&lt; h3.height &lt;&lt; ' '
+       &lt;&lt; h3.floors &lt;&lt; ' '
+       &lt;&lt; h3.flats &lt;&lt; endl;
+
+  House* ukh = &amp;h4;
+  ukh->height += 13.82;
+  cout &lt;&lt; ukh->height &lt;&lt; ' '
+       &lt;&lt; ukh->floors &lt;&lt; ' '
+       &lt;&lt; ukh->flats &lt;&lt; endl;
+
+  return 0;
+}
+</pre>
+
+  <p>Класс можжно передавать в функцию по значению или ссылке, а также возвращать его из функции.</p>
+
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+struct House {
+  double height;
+  int floors;
+  int flats;
+};
+
+House readHouse() {
+  House h;
+  cin >> h.height >> h.floors >> h.flats;
+  return h;
+}
+
+void swap(House& h1, House& h2) {
+  House tmp = h1;
+  h1 = h2;
+  h2 = tmp;
+}
+
+void printHouse(House* h) {
+  cout &lt;&lt; h->height &lt;&lt; ' '
+       &lt;&lt; h->floors &lt;&lt; ' '
+       &lt;&lt; h->flats &lt;&lt; endl;
+}
+
+int main() {
+  House h3, h4;
+  h3 = readHouse();
+  h4 = readHouse();
+  swap(h3, h4);
+  printHouse(&h3);
+  printHouse(&h4);
+
+  return 0;
+}
+</pre>
+
+  <p>Подведем промежуточный итог, написав программу, которая считывает чило n и n домов, каждый из которых задан тремя параметрами. Запишем их в массив, отсортируем по возрастанию высоты и выведем их номера на экран в отсортированном порядке.</p>
+  <p>Конечно, можны было создать массив объявленных структур</p>
+</article>
