--- a/src/components/alg/alg-conspect/sp1/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-sp1.html
@@ -1,7 +1,9 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
+  <p>Автор кружка Игорь Маслеников</p>
+  <p>Всего вышло 34 видео продолжительностью 80:48:04</p>
 </article>
 
 
