--- a/src/components/alg/alg-conspect/sp1/pages/elem-sp20.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-sp20.html
@@ -1,12 +1,12 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
 
 <article class="article">
-  <h1>Занятие 20 Графы#2. Поиск в ширину</h1>
+  <h1>Занятие 20 Графы #2. BFS. Поиск в ширину</h1>
   <p>Конспект видео от 2025.02.08</p>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/586871" target="_blank">Codeforces Контест 586871</a></p>
 </article>
@@ -17,7 +17,7 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p1">Графы#2. Поиск в ширину</a>
+    <a href="#p1">Графы #2. BFS. Поиск в ширину</a>
   </p>
   <p>
         <a href="#task1">Задача A. Путь</a>
@@ -40,12 +40,10 @@
 </article>
 
 
-<!-- Графы#2. Поиск в ширину -->
+<!-- Графы #2. BFS. Поиск в ширину -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h3>Графы#2. Поиск в ширину</h3>
-
-  <h4>Поиск в ширину. BFS</h4>
+  <h3>Графы #2. BFS. Поиск в ширину</h3>
 
   <p>Алгоритм поиск в ширину bfs (breadth first search) имеет огромное приложение в теории графов, как и алгоритм dfs. Алгоритм основан на трех принципах, а именно:</p>
   <ol>
