--- a/src/components/alg/alg-conspect/sp1/pages/elem-sp24.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-sp24.html
@@ -1,12 +1,12 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
 
 <article class="article">
-  <h1>Занятие 24 Математика#3. Генерация комбинаторных объектов</h1>
+  <h1>Занятие 24 Математика #3. Генерация комбинаторных объектов</h1>
   <p>Конспект видео от 2025.03.15</p>
   <p><a href="https://codeforces.com/group/1LSR3R5twn/contest/596277" target="_blank">Codeforces Контест 596277</a></p>
 </article>
@@ -17,7 +17,7 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p1">Математика#3. Генерация комбинаторных объектов</a>
+    <a href="#p1">Математика #3. Генерация комбинаторных объектов</a>
   </p>
   <p>
         <a href="#task1">Задача A. Перестановки 1 - N</a>
@@ -42,10 +42,10 @@
 </article>
 
 
-<!-- Математика#3. Генерация комбинаторных объектов -->
+<!-- Математика #3. Генерация комбинаторных объектов -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h3>Математика#3. Генерация комбинаторных объектов</h3>
+  <h3>Математика #3. Генерация комбинаторных объектов</h3>
 
   <p>Для генерации комбинаторных объектов будем стараться писать максимально эффективные рекурсивные функции. Примерный шаблон рекурсивной функции для генерации любого комбинаторного объекта:</p>
 <pre>
