--- a/src/components/alg/alg-conspect/sp1/pages/elem-sp28.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-sp28.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
@@ -20,7 +20,7 @@
     <a href="#p1">Математика #4. Геометрия база</a>
   </p>
   <p>
-        <a href="#task1">Задача A. Полярные угол точки</a>
+        <a href="#task1">Задача A. Полярный угол точки</a>
     <br><a href="#task2">Задача B. Угол между векторами</a>
     <br><a href="#task3">Задача C. Площадь многоугольника</a>
     <br><a href="#task4">Задача D. Площадь треугольника</a>
@@ -50,13 +50,221 @@
   <div class="anchor" id="p1"></div>
   <h3>Математика #4. Геометрия база</h3>
 
+  <h4>Проблемы вещественных чисел</h4>
+
+  <p>Основные проблемы работы с вещественными числами:</p>
+  <ol>
+    <li>Вывод вещественного числа с нужной точностью</li>
+    <li>Потеря точности с операциями вещественных чисел.</li>
+  </ol>
+
+  <p>Для решения первой проблемы, необходимо понимать, как работает тестирующая система при проверке ответа участника и члена жюри. Если в условии задачи указано выведите ответ с точностью 4 знака после запятой. Тестирующая система проверяет по формуле |res<sub>jury</sub> - res| &lt; 0.0001. Банальное хорошее решение проблемы выводить ответ с заведомо больших количеством цифр после запятой.</p>
+  <code>#include &lt;iomanip&gt;</code>
+  <code>cout &lt;&lt; fixed &lt;&lt; setprecision(10) &lt;&lt; a;</code>
+
+  <p>Вторая проблема потеря точности связана с представлением мантиссы у вещественных чисел. К сожалению, мантисса конечна при любой операции вещественных чисел существует ошибка в конце мантиссы. Если операций с вещественными числами большое количество ошибка накапливается и может стать существенной при сборе ответа.</p>
+
+  <p>Самый банальный наглядный пример:</p>
+  <p>При сложении 1000 вещественных чисел в разном порядке можно получить разные ответы. Они будут близки, но могут не совпадать. Чем больше будет чисел в сложении чем больше накопиться ошибка в ответе суммы.</p>
+
+  <p>Решение проблемы - стараться избегать вещественные числа и пользоваться по возможности целыми.</p>
+
+  <h4>Структуры</h4>
+
+  <p>Шаблон структур C++:</p>
+<pre>
+struct имя_структуры {
+  компоненты_структуры
+};
+</pre>
+
+  <p>Доступ к членам структуры. Для доступа к членам структуры используется оператор точки (.).</p>
+
+  <p>Членами структуры считаются:</p>
+  <p>Поля - элементы, которые хранят информацию.</p>
+  <p>Методы - внутренние функции структуры.</p>
+
+  <h4>Точка/вектор</h4>
+
+  <p>Точка — это геометрическая фигура, из которой состоят все остальные геометрические фигуры.</p>
+
+  <p>Вектор — это направленный отрезок, то есть отрезок, имеющий длину и определённое направление.</p>
+
+  <p>Точка и вектор задаются в пространстве Rⁿ при помощи n координат. Например, на плоскости (x, y).</p>
+
+  <p>Структура точки/вектор с конструктором.</p>
+<pre>
+struct poin {
+  double x, y;
+  point(double curx = 0, double cury = 0) {
+    x = curx;
+    y = cury;
+  }
+}
+</pre>
+
+  <p>Конструктор представляют специальную функцию, которая имеет то же имя, что и класс, которая не возвращает никакого значения и которая позволяет инициализировать объект класса во время его создания и таким образом гарантировать, что поля класса будут иметь определенные значения.</p>
+
+  <p>Перегрузка операторов позволяет определить для объектов классов встроенные операторы, такие как +, -, * и т.д. Для определения оператора для объектов своего класса, необходимо определить функцию, название которой содержит слово operator и символ перегружаемого оператора.</p>
+<pre>
+point operator+ (point TMP) {
+  point res;
+  res.x = x + TMP.x;
+  res.y = y + TMP.y;
+  return res;
+}
+</pre>
+
+  <p>Пример работы:</p>
+<pre>
+point A, B(3, 5);
+point C = B;
+A = B + C;
+</pre>
+
+  <p>Остальные полезные перегрузки для работы с векторами:</p>
+<pre>
+point operator- (point TMP) {
+  point res;
+  res.x = x - TMP.x;
+  res.y = y - TMP.y;
+  return res;
+}
+</pre>
+
+<pre>
+point operator* (point k) {
+  point res;
+  res.x = x * k;
+  res.y = y * k;
+  return res;
+}
+</pre>
+
+  <p>Полезное с векторами:</p>
+  <ol>
+    <li>
+      Нахождение длины вектора:
+      <code>|a| = sqrt(a.x * a.x + a.y * a.y)</code>
+    </li>
+    <li>
+      Нахождение скалярного произведения:
+      <code>(a, b) = |a| * |b|cos(Θ) = a.x * b.x + a.y * b.y</code>
+    </li>
+    <li>
+      Нахождение векторного произведения:
+      <code>[a, b] = |a| * |b|sin(Θ) = a.x * b.y - a.y * b.x</code>
+    </li>
+  </ol>
+
+  <p>Полезные функции:</p>
+<pre>
+double dist2(point A) {
+  return A.x * A.x + A.y * A.y;
+}
+</pre>
+<pre>
+double dot(point A, point B) {
+  return A.x * B.x + A.y * B.y;
+}
+</pre>
+<pre>
+double cross(point A, point B) {
+  return A.x * B.y - A.y * B.x;
+}
+</pre>
+
+  <p>Операция нормирование вектора - это изменение длины вектора до длины равной 1 (его уменьшение или сжатие на нужную величину) new_a = a / |a| .</p>
+
+  <p>Операция поворот вектора на угол Θ против часовой стрелки:</p>
+<pre>
+new_a = (cos(Θ) -sin(Θ)) (x)
+        (sin(Θ)  cos(Θ)) (y)
+</pre>
+  <p>В этой формуле матрица поворота умножается на вектор. Перемножаем строчку на столбец:</p>
+<pre>
+new_ax = cos(Θ)*x - sin(Θ)*y
+new_ay = sin(Θ)*x + cos(Θ)*y
+</pre>
+
+  <p>Операция поворот вектора на угол Θ по часовой стрелке:</p>
+<pre>
+new_a = ( cos(Θ) sin(Θ)) (x)
+        (-sin(Θ) cos(Θ)) (y)
+</pre>
+
+  <h4>Треугольник</h4>
+
+  <p>В задачах по спортивному программированию сложные фигуры в том числе и  треугольники будут задаваться при помощи набора точек. Какими способами можно найти площадь треугольника?</p>
+
+  <p>Площадь треугольника:</p>
+  <ol>
+    <li>
+      Формула Герона:
+      <code>p = (a + b + c) / 2, S = sqrt(p * (p - a) * (p - b) * (p - c)).</code>
+      <p>Никогда не используйте формулу Герона! Слишком большая потеря точности и возможное переполнение типов данных!</p>
+    </li>
+    <li>
+      Формула сторона на высоту:
+      <code>S = (1 / 2) * h * a.</code>
+      <p>К сожалению, в задаче вы не будете знать высоту.</p>
+    </li>
+    <li>
+      Формула две стороны и угол между ними:
+      <code>S = (1 / 2) * a * b * sin(Θ) = |cross(a, b)| / 2.</code>
+      <p>Площадь через синус угла очень похожа на векторное произведение (cross).</p>
+    </li>
+  </ol>
+
+  <p>Медиана треугольника — это отрезок, соединяющий вершину треугольника с серединой противоположной стороны.</p>
+  <p>Биссектриса треугольника — отрезок биссектрисы угла, проведённый из вершины треугольника к противолежащей стороне и делящий этот угол пополам.</p>
+  <p>Высота треугольника — это перпендикуляр, проведённый из вершины треугольника к прямой, содержащей противоположную сторону.</p>
+
+  <h4>Прямая</h4>
+
+  <p>Общее уравнение прямой линии на плоскости в декартовых координатах:</p>
+  <code>Ax + By + C = 0.</code>
+
+  <p>Так же это уравнение называют нормальным уравнением прямой, так как по коэффициентам A, B определяется вектор нормали (A,B). Вектор нормали - это вектор, который перпендикулярен прямой.</p>
+  <p>В задачах чаще всего прямые задаются по двум точкам через каноническое уравнение прямой.</p>
+  <code>(x - x1) / (x2 - x1) = (y - y1) / (y2 - y1).</code>
+
+  <p>При решении задач с прямыми всегда необходимо переводить из канонического вида в нормальный вид прямой.</p>
+
+  <p>Проверка принадлежности точки прямой. Первая формула верна математически, но она совсем не подходит для программирования. В программировании используют вторую формулу, где определяют с некоторой погрешностью ε.</p>
+  <code>A * px + B * py + C = 0.</code>
+  <code>|A * px + B * py + C| &lt; ε.</code>
+
+  <p>Проверка что прямые параллельны. Первая формула не подходит из-за возможного деления на ноль. Надо использовать вторую формулу.</p>
+  <code>A1 / A2 == B1 / B2</code>
+  <code>A1 * B2 == B1 * A2.</code>
+
+  <p>Точка пересечения двух прямых. Чтобы найти точку с координатами (x, y) пересечения двух прямых, нужно решить систему из двух уравнений.</p>
+  <code>A1x + B1y + C1 = 0</code>
+  <code>A2x + B2y + C2 = 0.</code>
+
+  <p>Расстояние от точки до прямой.</p>
+  <p>Есть несколько вариантов решения этой задачи.</p>
+  <ol>
+    <li>Найти формулу для нахождения расстояния или вывести самостоятельно.</li>
+    <li>Построить перпендикулярную прямую, проходящую через точку A.</li>
+    <li>Найти две точки на прямой a, построить треугольник и в нем найти высоту,
+опущенную на прямую.</li>
+  </ol>
+
+  <h4>Площадь фигуры</h4>
+
+  <p>Задан многоугольник, как определить его площадь?</p>
+
+  <p>Во-первых, можно разбить многоугольник на треугольники и посчитать сумму их площадей. Но это очень трудная задача, потому что трудно определить по трем точкам, что треугольник внутри многоугольника, а не снаружи.</p>
+  <p>Воспользуемся метод трапеций (интегрирование). Площадь трапеции это   полу сумма оснований на высоту. За высоту возьмем разность координат x   соседних вершин основание значение y. При проходе по списку вершин   учитываем направление по оси x, от нее зависит знак площади трапеции.</p>
 </article>
 
 
-<!-- Задача A. Полярные угол точки -->
+<!-- Задача A. Полярный угол точки -->
 <article class="article">
   <div class="anchor" id="task1"></div>
-  <h3>Задача A. Полярные угол точки</h3>
+  <h3>Задача A. Полярный угол точки</h3>
 
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 64мб</i></div>
@@ -73,6 +281,44 @@
   <h4>Пример</h4>
   <code>2 3</code>
   <code>0.98279</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Если провести прямую через точку и через начало координат, то угол между этой прямой и осью X называется <strong>полярный угол точки</strong>.</p>
+    <p>Возьмем первый вектор длиной 1, выходящий из начала координат и лежащий на оси X, с координатами (0, 0), (1, 0). Возьмем второй вектор, выходящий из начала координат и заканчивающийся в заданной точке, с координатами (0, 0), (x, y). Надо найти угол между этими двумя векторами.</p>
+    <p>Есть короткое и красивое решение данной задачи при помощи функции atan2() из библиотеки cmath. Функция atan2 возвращает число в диапазоне от -пи до +пи, нам нужен ответ в диапазоне от 0 до 2пи. Поэтому если получится отрицательное число, то надо к нему прибавить 2пи.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;iomanip&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода
+  ios::sync_with_stdio(false);
+  cin.tie(nullptr);
+
+  // работа с файлами
+  freopen("angle1.in", "rt", stdin);
+  freopen("angle1.out", "wt", stdout);
+
+  // ввод данных
+  double x, y;
+  cin >> x, y;
+
+  // решение
+  double res = atan2(y, x);
+
+  if (res &lt; 0) {
+    res += 2 * 3.14159265;
+  }
+
+  // вывод результата
+  cout &lt;&lt; fixed &lt;&lt; setprecision(10) &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -125,6 +371,49 @@
 1 1
 </pre>
   <code>0.5</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Будем собирать сумму многоугольника через сумму трапеций. Каждая трапеция формируется одной стороной многоугольника. Проходим в цикле по всем соседним вершинам и находим площадь как высота умноженная на полусумму основания трапеции.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;iomanip&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода
+  ios::sync_with_stdio(false);
+  cin.tie(nullptr);
+
+  // работа с файлами
+  freopen("area.in", "rt", stdin);
+  freopen("area.out", "wt", stdout);
+
+  // ввод данных
+  int n;
+  cin >> n;
+
+  // вектор точек многоугольника
+  vector&lt;pair&lt;double, double&gt; &gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i].first >> A[i].second;
+  }
+
+  // решение
+  double result = 0;
+  for (int i = 0; i &lt; n - 1; i++) {
+    result += (A[i].first - A[i + 1].first) * (A[i].second + A[i + 1].second) / 2;
+  }
+  result += (A[n - 1].first - A[0].first) * (A[n - 1].second + A[0].second) / 2;
+  result = abs(result);
+
+  // вывод результата
+  cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; result;
+}
+</pre>
+  </details>
 </article>
 
 
