--- a/src/components/alg/alg-conspect/sp1/pages/elem-spRound1016.html
+++ b/src/components/alg/alg-conspect/sp1/pages/elem-spRound1016.html
@@ -1,6 +1,6 @@
 <article class="article">
   <strong>Спортивное программирование в ЯрГУ</strong>
-  <p>Конспект курса</p>
+  <p>ЯрГУ. Кружок. Школьники 2024/2025</p>
   <p><a href="https://vkvideo.ru/@sportprog_yarsu" target="_blank">vkvideo.ru/@sportprog_yarsu</a></p>
 </article>
 
